Fixed the broken layout in login page

--- a/app/assets/stylesheets/frontend/devise/shared/links.scss
+++ b/app/assets/stylesheets/frontend/devise/shared/links.scss
@@ -1,4 +1,4 @@
 #google_oauth2-login {
   border-radius: 7px;
-  font-size: 14px;
+  margin-top: 3rem;
 }
